--- a/circle.yml
+++ b/circle.yml
@@ -9,5 +9,7 @@ dependencies:
 
 test:
   override:
-    - cd /home/ubuntu/.go_workspace/src/github.com/caiyeon/lunch-with-us && go build -o lunch-with-us -v github.com/caiyeon/lunch-with-us
-    - mv /home/ubuntu/.go_workspace/src/github.com/caiyeon/lunch-with-us/lunch-with-us $CIRCLE_ARTIFACTS
+    - ? |
+        cd /home/ubuntu/.go_workspace/src/github.com/caiyeon/lunch-with-us
+        go build -o lunch-with-us -v github.com/caiyeon/lunch-with-us
+        mv lunch-with-us $CIRCLE_ARTIFACTS
