--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "hover.css": "^2.2.0",
     "keen-ui": "^1.0.0",
     "vue": "^2.3.3",
+    "vue-password": "0.0.11",
     "vue-router": "^2.6.0"
   },
   "devDependencies": {
